# figue

./: Cargo.toml  README.md  README.md.in
.github/workflows/: test.yml
.zed/: settings.json
crates/figue/: Cargo.toml  README.md.in
crates/figue-attrs/: README.md
crates/figue-attrs/src/: lib.rs
crates/figue/examples/: args_showcase.rs
crates/figue/src/: builder.rs  color.rs  completions.rs  config_format.rs  config_value.rs  config_value_parser.rs  driver.rs  dump.rs  error.rs  extract.rs  help.rs  lib.rs  missing.rs  provenance.rs  reflection.rs  schema.rs  span_registry.rs  value_builder.rs
crates/figue/src/layers/: cli.rs  env.rs  file.rs
crates/figue/src/schema/: error.rs  from_schema.rs
crates/figue/tests/common/: mod.rs
crates/figue/tests/integration/: ariadne.rs  deser_errors.rs  mod.rs  simple.rs  subcommand_errors.rs  unknown_keys.rs
crates/figue/tests/integration/snapshots/: main__integration__ariadne__ariadne_invalid_value.snap  main__integration__ariadne__ariadne_missing_argument.snap  main__integration__deser_errors__deser_error_cli_override_wrong_type.snap  main__integration__deser_errors__deser_error_env_negative_for_unsigned.snap  main__integration__deser_errors__deser_error_env_number_out_of_range.snap  main__integration__deser_errors__deser_error_env_overrides_valid_file.snap  main__integration__deser_errors__deser_error_env_wrong_type_for_port.snap  main__integration__deser_errors__deser_error_file_nested_wrong_type.snap  main__integration__deser_errors__deser_error_file_wrong_type_for_port.snap  main__integration__err__error_char_with_multiple_chars.snap  main__integration__err__error_invalid_ip_address.snap  main__integration__err__error_missing_value_for_argument_short_missed.snap  main__integration__err__error_negative_value_for_unsigned.snap  main__integration__err__error_number_outside_range.snap  main__integration__err__error_out_of_range.snap  main__integration__err__error_wrong_type_for_argument.snap  main__integration__help__help_simple_struct.snap  main__integration__help__help_with_subcommands.snap  main__integration__help__nested_intermediate_repo_help.snap  main__integration__help__nested_subcommand_clone_help.snap  main__integration__help__nested_subcommand_push_help.snap  main__integration__help__subcommand_install_help.snap  main__integration__help__subcommand_list_help.snap  main__integration__help__subcommand_remove_help.snap  main__integration__help__subcommand_root_help.snap  main__integration__help__tuple_variant_main_help.snap  main__integration__layered__layered_dump_shows_all_sources.snap  main__integration__layered__layered_missing_required_field.snap  main__integration__schema_defaults__schema_default_vs_missing.snap  main__integration__schema_defaults__schema_multiple_default_types.snap  main__integration__sequence__noargs_single_positional.snap  main__integration__sequence__noargs_vec_positional_no_default.snap  main__integration__simple__completions_help_shows_enum_variants.snap  main__integration__simple__from_slice_with_completions_shows_helpful_error.snap  main__integration__subcommand__missing_nested_subcommand_error.snap  main__integration__subcommand_errors__nested_subcommand_missing_required.snap  main__integration__subcommand_errors__no_subcommand_provided.snap  main__integration__subcommand_errors__subcommand_missing_required_named.snap  main__integration__subcommand_errors__subcommand_missing_required_positional.snap  main__integration__subcommand_errors__subcommand_mixed_missing_arguments.snap  (+5 more)
examples/: args_showcase.rs  demo_errors.rs  test_rename.rs
figue-attrs/: Cargo.toml  README.md.in
figue-attrs/src/: lib.rs
src/: builder.rs  config_format.rs  config_value.rs  config_value_parser.rs  driver.rs  dump.rs  enum_conflicts.rs  env.rs  env_subst.rs  error.rs  help.rs  lib.rs  macros.rs  missing.rs  provenance.rs  reflection.rs  schema.rs  span_registry.rs  value_builder.rs
src/layers/: cli.rs  env.rs  file.rs  mod.rs
src/schema/: from_schema.rs  tests.rs
src/schema/snapshots/: figue__schema__tests__snapshot_schema_basic.snap
tests/common/: mod.rs
tests/integration/: ariadne.rs  env_subst.rs  help.rs  layered.rs  mod.rs  sequence.rs  subcommand.rs
tests/integration/snapshots/: main__integration__ariadne__ariadne_invalid_value.snap  main__integration__ariadne__ariadne_missing_argument.snap  main__integration__ariadne__ariadne_missing_argument.snap.new  main__integration__ariadne__ariadne_unexpected_positional.snap.new  main__integration__ariadne__ariadne_unknown_flag_with_suggestion.snap.new  main__integration__ariadne__ariadne_unknown_subcommand.snap.new  main__integration__err__error_bool_with_invalid_value_positional.snap.new  main__integration__err__error_char_with_multiple_chars.snap.new  main__integration__err__error_complex_nested_structure.snap.new  main__integration__err__error_invalid_ip_address.snap.new  main__integration__err__error_missing_value_for_argument.snap.new  main__integration__err__error_missing_value_for_argument_short_eof.snap.new  main__integration__err__error_missing_value_for_argument_short_missed.snap.new  main__integration__err__error_negative_value_for_unsigned.snap.new  main__integration__err__error_nested_struct_with_scalar.snap.new  main__integration__err__error_non_struct_type_not_supported.snap.new  main__integration__err__error_number_outside_range.snap.new  main__integration__err__error_option_with_multiple_values.snap.new  main__integration__err__error_out_of_range.snap.new  main__integration__err__error_tuple_struct_field_access.snap.new  main__integration__err__error_unexpected_positional_arg.snap  main__integration__err__error_unexpected_positional_arg.snap.new  main__integration__err__error_unknown_argument.snap  main__integration__err__error_unknown_argument.snap.new  main__integration__err__error_wrong_type_for_argument.snap  main__integration__err__error_wrong_type_for_argument.snap.new  main__integration__help__help_enum_only.snap  main__integration__help__help_enum_only.snap.new  main__integration__help__help_simple_struct.snap  (+27 more)
