[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["Amos Wenger <amos@bearcove.eu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/figue"
homepage = "https://github.com/bearcove/figue"
keywords = ["cli", "args", "parser", "facet", "command-line"]
categories = ["command-line-interface"]

[workspace.dependencies]
figue-attrs = { path = "crates/figue-attrs", version = "1.0.0" }

# Facet ecosystem
facet = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43", features = [
  "indexmap",
  "camino",
  "net",
] }
facet-core = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
facet-format = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
facet-reflect = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
facet-pretty = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
facet-error = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
facet-showcase = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
facet-solver = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
facet-testhelpers = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }

# External dependencies
camino = "1.1"
heck = "0.5.0"
indexmap = "2"
owo-colors = "4"
tracing = "0.1"
ariadne = "0.6"
unicode-width = "0.2.2"
strip-ansi-escapes = "0.2.1"
strsim = "0.11"
insta = "1"
supports-color = "3"
tempfile = "3"

# Uncomment for local development with facet
# [patch."https://github.com/facet-rs/facet"]
# facet = { path = "../facet/facet" }
# facet-core = { path = "../facet/facet-core" }
# facet-format = { path = "../facet/facet-format" }
# facet-json = { path = "../facet/facet-json" }
# facet-reflect = { path = "../facet/facet-reflect" }
# facet-pretty = { path = "../facet/facet-pretty" }
# facet-error = { path = "../facet/facet-error" }
# facet-showcase = { path = "../facet/facet-showcase" }
# facet-solver = { path = "../facet/facet-solver" }
# facet-testhelpers = { path = "../facet/facet-testhelpers" }
